--- a/book.tex
+++ b/book.tex
@@ -1,15 +1,14 @@
 \documentclass{book}
 
 \usepackage{hyperref}
-\title{Growing Programs: SOMETHING SOMETHING}
-% I'm glad I didn't erase my board
+\title{Growing Programs: A Constructive Approach to Computational Problem Solving}
 \author{Peter Boothe and John Lasseter}
 
 
 \begin{document}
 \maketitle
 \tableofcontents
-\chapter{What is a Program and How Are They Grown?}
+\chapter{Writing and Growing}
 \chapter{Printing things out and reading things in}
 \chapter{Numbers and Math}
 \chapter{Conditional Execution}
