New TOC, to mirror our cross-cutting concerns.
Now with sections.  Feel free to make it include subfiles.

--- a/book.tex
+++ b/book.tex
@@ -4,16 +4,58 @@
 \title{Growing Programs: A Constructive Approach to Computational Problem Solving}
 \author{Peter Boothe and John Lasseter}
 
-
 \begin{document}
 \maketitle
+
+The big cross-cutting concern we have is growing programs --- in every
+instance, we want to show how we are writing a program the wrong way, fixing
+it, and then writing an equivalent program the right way.
+
+Exploratory programming.
+
+The ability to use and make patterns.
+
+The ability to simplify problems.
+The ability to add complexity appropriately.
+
+The ability to generalize problems.
+The ability to specialize problems.
+
+In all cases, we want to emphasize that solutions should be grown.  Because
+students don't believe what they read or are told, we must, with every
+solution, show all of its growth stages.
+
 \tableofcontents
-\chapter{Writing and Growing}
 \chapter{Printing things out and reading things in}
+\section{How to grow an interactive program}
+
+\chapter{Data types --- Strings and Ints and Floats and Booleans}
+\section{How to grow a numerical program}
+
 \chapter{Numbers and Math}
+\section{How to grow a numerical program}
+\section{The math library}
+
 \chapter{Conditional Execution}
-\chapter{Graphics}
-\chapter{Functions}
+\section{How to grow a decision tree}
+
 \chapter{Loops}
+\section{How to grow a for loop}
+\section{How to grow a while loop}
+
+\chapter{Lists and Dictionaries}
+\section{How to grow a program using lists}
+\section{How to grow a dictionary-using program}
+
+\chapter{Functions}
+\section{How to grow a function}
+\section{How to grow a recursive function}
+\section{Structured design}
+\section{How to grow a structured design}
+
 \chapter{Objects}
+\section{How to grow a program using objects}
+
+\chapter{Classes}
+\section{How to grow a class}
 \end{document}
